<?xml version="1.0"?>
<package>
  <name>example_robot</name>
  <version>0.6</version>
  <description>
	This is an example of configuration of a robotic system based
	on the board uNav or the board RoboController.
  </description>

  <maintainer email="raffaello@rnext.it">Raffaello Bonghi</maintainer>
  <maintainer email="mauro.soligo@katodo.com">Mauro Soligo</maintainer>
  <maintainer email="myzhar@robot-home.it">Walter 'Myzhar' Lucetti</maintainer>

  <license>BSD</license>

  <url type="website">http://rnext.it/project/example_robot</url>
  <url type="website">http://www.officinerobotiche.it</url>
  <url type="repository">https://github.com/officinerobotiche/example_robot_ros</url>

  <author email="raffaello@rnext.it">Raffaello Bonghi</author>
  <author email="mauro.soligo@katodo.com">Mauro Soligo</author>
  <author email="myzhar@robot-home.it">Walter 'Myzhar' Lucetti</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>orbus_interface</run_depend>

</package>
